fix mob shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #f4f4f5;
   --foreground: #18181b;
-  --bg-mobile-shift: 50px;
+  --bg-mobile-shift: 75px;
 }
 
 .dark {
